--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Puls4: Comunidad para gente atractiva y millonaria</title>
-	<link rel="stylesheet" href="css/pulsa4.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/puls4.css">
 </head>
 <body>
 	<header>
