ultimo antes de salir de trabajo

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 				Pils4: Comunidad profesional de gente atractiva 
 			</h1>
 			<a class="filtro" href="#">
-				Responsive Design
+				Stylus 
 			</a>
-			<a href="#" class="Publicar">
+			<a href="#" class="publicar">
 				Publicar
 			</a>
 		</div>
